added font style and completed the nav section

--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids School</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Style/style.css">
 </head>
-<body>
-    <header>
-        <nav>
 
+<body class="body quicksand-font">
+    <header>
+        <nav class="navbar display-flex">
+            <div class="nav-logo display-flex">
+                <img src="./assets/logo.png" alt="">
+                <h3 class="scl-name">SCHOOL</h3>
+            </div>
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="" id="orange" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="" id="blue" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="" id="green" class="nav-link">Facilities</a></li>
+                <li class="nav-item"><a href="" id="purple" class="nav-link">Admission</a></li>
+            </ul>
+            <button class="contact">Contact</button>
         </nav>
     </header>
     <main>
@@ -19,4 +34,5 @@
 
     </footer>
 </body>
+
 </html>
