responsive nav bar

--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
 </head>
 
 <body class="body quicksand-font">
-    <header>
+    <header class="hr-line">
         <nav class="navbar display-flex">
             <div class="nav-logo display-flex">
                 <img src="./assets/logo.png" alt="">
                 <h3 class="scl-name">SCHOOL</h3>
+            </div>
+            <div class="menu-section">
+                <div class="menu"></div>
+                <div class="menu"></div>
+                <div class="menu"></div>
             </div>
             <ul class="nav-links display-flex">
                 <li class="nav-item"><a href="" id="orange" class="nav-link">Home</a></li>
