--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
         </nav>
     </header>
     <main>
-
+        <div class="banner-container display-flex">
+            <div class="banner-text">
+                <h3 class="banner-title"><span id="orange">Empowering</span> <br>
+                    students from small <br> age <span id="blue">towards vision</span></h3>
+                <p class="banner-description">With the courage, Confidence, Creativity and Compassion to make <br> their Unique Contribution in a Diverse and Dynamic World.</p>  
+                <button id="btn1" class="btn-primary">Enroll Now</button>  
+            </div>
+            <img src="./assets/hero-kids.png" alt="">
+        </div>
     </main>
     <footer>
 
