--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Style/style.css">
+    <script src="https://kit.fontawesome.com/a19612331a.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="body quicksand-font">
@@ -37,10 +38,47 @@
             <div class="banner-text">
                 <h3 class="banner-title"><span id="orange">Empowering</span> <br>
                     students from small <br> age <span id="blue">towards vision</span></h3>
-                <p class="banner-description">With the courage, Confidence, Creativity and Compassion to make <br> their Unique Contribution in a Diverse and Dynamic World.</p>  
-                <button id="btn1" class="btn-primary">Enroll Now</button>  
+                <p class="banner-description">With the courage, Confidence, Creativity and Compassion to make <br> their
+                    Unique Contribution in a Diverse and Dynamic World.</p>
+                <button id="btn1" class="btn-primary">Enroll Now</button>
             </div>
             <img src="./assets/hero-kids.png" alt="">
+        </div>
+
+        <div class="curriculum">
+            <h3 class="curriculum-title">Standard Curriculum</h3>
+
+            <div class="curriculum-container display-flex">
+
+                <div class="curriculum-card-1">
+                    <img src="./assets/kinder.png" alt="">
+                    <h4 class="card-title">Kinder (3-6) Years</h4>
+                    <p class="card-description">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <a href="" id="blue" class="read-more">read-more</a>
+                </div>
+                <div class="curriculum-card-2">
+                    <img src="./assets/elementary.png" alt="">
+                    <h4 class="card-title">Elementary School</h4>
+                    <p class="card-description">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <a href="" id="orange" class="read-more">read-more</a>
+                </div>
+                <div class="curriculum-card-3">
+                    <img src="./assets/middle.png" alt="">
+                    <h4 class="card-title">Middle (10-16) Years</h4>
+                    <p class="card-description">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <a href="" id="purple" class="read-more">read-more</a>
+                </div>
+            </div>
+            <div class="arrow-icon">
+                <img src="./assets/lessthan.png" alt="">
+                <img src="./assets/greaterthan.png" alt="">
+            </div>
         </div>
     </main>
     <footer>
