--- a/index.html
+++ b/index.html
@@ -80,6 +80,53 @@
                 <img src="./assets/greaterthan.png" alt="">
             </div>
         </div>
+        <div class="story display-flex">
+            <h3 class="story-title">Our Stories</h3>
+            <div class="story-container display-flex">
+                <div class="big-card">
+                    <div class="first-half">
+                        <img src="./assets/story-1.png" alt="">
+                    </div>
+                    <div class="second-half">
+                        <h4 class="story-card-title">A fun toddler coloring training on <br>
+                            classroom</h4>
+                        <p class="story-card-description">Beautiful branding for changes by Never Now in Australia.
+                            changes is a platform for open discussion in an inclusive and
+                            collaborative environment, providing the...
+                        </p>
+                    </div>
+                    <button class="big-card-btn">November 20, 2024</button>
+                </div>
+                
+                <div class="small-cards">
+                    <div class="small-card">
+                        <img src="./assets/story-2.png" alt="">
+                        <h4 class="small-story-card-title">Find out if a school fits the <br>
+                            family’s needs</h4>
+                        <button class="small-card-btn-green">November 20, 2024</button>
+                    </div>
+                    <div class="small-card">
+                        <img src="./assets/story-3.png" alt="">
+                        <h4 class="small-story-card-title">Summer math & literacy <br>
+                            centres for kids</h4>
+                        <button class="small-story-card-purple">November 20, 2024</button>
+                    </div>
+                    <div class="small-card">
+                        <img src="./assets/story-2.png" alt="">
+                        <h4 class="small-story-card-title">Classroom management <br>
+                            techniques for new tutors</h4>
+                        <button class="small-story-card-purple">November 20, 2024</button>
+                    </div>
+                    <div class="small-card">
+                        <img src="./assets/story-4.png" alt="">
+                        <h4 class="small-story-card-title">Conversation rhymes <br>
+                            improve kids listening</h4>
+                        <button class="small-card-btn-green">November 20, 2024</button>
+                    </div>
+                </div>
+            </div>
+            <button id="story-btn" class="btn-primary">View All</button>
+        </div>
     </main>
     <footer>
 
