added footer section

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </div>
                     <button class="big-card-btn">November 20, 2024</button>
                 </div>
-                
+
                 <div class="small-cards">
                     <div class="small-card">
                         <img src="./assets/story-2.png" alt="">
@@ -129,7 +129,30 @@
         </div>
     </main>
     <footer>
-
+        <div class="footer-container">
+            <div class="first-column">
+                <div class="school-logo display-flex">
+                    <img src="./assets/logo.png" alt="">
+                    <h3>Kids <br> Education</h3>
+                </div>
+                <br>
+                <p>Pizza ipsum dolor meat lovers buffalo. <br> Deep dolor roll melted bacon Bianca pan <br> bacon pineapple Aussie.
+                    Mayo rib sauce <br> Hawaiian meatball.</p>
+            </div>
+            <div class="secont-column">
+                <h5>About School</h5>
+                <div class="secont-column-links display-flex">
+                    <a href="">Home</a>
+                    <a href="">About</a>
+                    <a href="">Facilities</a>
+                    <a href="">Admission</a>
+                </div>
+            </div>
+            <div class="third-column">
+                <h3>Keep In Touch</h3>
+                <img src="./assets/fb.png" alt=""><img src="./assets/dribble.png" alt=""><img src="./assets/twitter.png" alt=""><img src="./assets/google+.png" alt="">
+            </div>
+        </div>
     </footer>
 </body>
 
