added marquee and hover effect

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         </nav>
     </header>
     <main>
+        <div class="marq display-flex">
+            <h5>Latest:</h5>
+            <a href=""><marquee scrolldelay="100" height="50" direction="left">The science unit admission test will be held on <span class="marq-text">15 February 2025</span> instead of 01 February 2025. The test dates for other units will be held on the predeclared dates. For more click here.......</marquee></a>
+        </div>
+        
         <div class="banner-container display-flex">
             <div class="banner-text">
                 <h3 class="banner-title"><span id="orange">Empowering</span> <br>
@@ -136,7 +141,8 @@
                     <h3>Kids <br> Education</h3>
                 </div>
                 <br>
-                <p>Pizza ipsum dolor meat lovers buffalo. <br> Deep dolor roll melted bacon Bianca pan <br> bacon pineapple Aussie.
+                <p>Pizza ipsum dolor meat lovers buffalo. <br> Deep dolor roll melted bacon Bianca pan <br> bacon
+                    pineapple Aussie.
                     Mayo rib sauce <br> Hawaiian meatball.</p>
             </div>
             <div class="secont-column">
@@ -150,7 +156,8 @@
             </div>
             <div class="third-column">
                 <h3>Keep In Touch</h3>
-                <img src="./assets/fb.png" alt=""><img src="./assets/dribble.png" alt=""><img src="./assets/twitter.png" alt=""><img src="./assets/google+.png" alt="">
+                <img src="./assets/fb.png" alt=""><img src="./assets/dribble.png" alt=""><img src="./assets/twitter.png"
+                    alt=""><img src="./assets/google+.png" alt="">
             </div>
         </div>
     </footer>
